src/sass/components/_ModeSelector.scss
@use "../abstracts/variables" as *;

.mode-selector {
  justify-content: initial;
  padding-block: 2em;
  h1 {
    text-align: center;
    font-size: 1.65rem;
    color: #090909;
  }
  &__fieldset {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    border: none;
    margin: 0 auto;
  }
  &__radio-input {
    display: none;
    &:checked + .mode-selector__label {
      @extend .checked;
    }
  }
  &__radio-input--locked {
    display: none;
    &:checked + .locked {
      transform: translateZ(0) translate(0, -10px) ;
      transition: transform 0.15s ease;
      background-color: rgba(128, 128, 128);
      color: $text-color-light;
      border: 4px solid $text-color-light;
      svg {
        fill: $text-color-light;
      }
    }
  }
  &__label {
    user-select: none;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    width: 90%;
    min-height: 4.5em;
    font-size: 1.2rem;
    color: $text-color-light;
    background: rgba(255, 85, 114, 0.75);
    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
    backdrop-filter: blur(2px);
    -webkit-backdrop-filter: blur(4px);
    border-radius: 1em;
    border: 1px solid rgba(255, 255, 255, 0.18);
    margin: 0.5em;
    padding: 0 2.75em;
    &-icon {
      display: none;
      position: fixed;
      right: 5%;
    }
  }
  &__btn {
    // position: absolute;
    // bottom: 3%;
    // right: 18%;
    // z-index: 2;
    display: none;
    font-family: $font-mochiy-pop-p-one;
    font-size: 1.175rem;
    background-color: $primary-color;
    color: $text-color-light;
    border: 4px solid $text-color-light;
    border-radius: 2em;
    box-shadow: $box-shadow;
    padding: 0.9em;
    width: 13em;
    &:hover {
      transform: translate(0, -5px);
      transition: transform 0.15s ease-in-out;
    }
  }
}

.locked {
  background: rgba(128, 128, 128, 0.25);
  color: rgb(32, 31, 31);
  border: 1px solid rgba(255, 255, 255, 0.18);
  p {
         align-self: center;
       }
       .mode-selector__label-icon {
         display: block;
       }
}

.checked {
  background-color: #06d6a0;
  color: $text-color-light;
  border: 4px solid $text-color-light;
  transform: translateZ(0) (0, -10px);
  transition: transform 0.15s ease;
}

.active {
  display: block;
}

.btn-background {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  bottom: 0;
  z-index: 2;
  width: 100%;
  height: 12%;
  background: rgba(255, 85, 114, 0.6);
  animation: slide-in-bottom 0.25s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}

@for $i from 1 through 12 {
  .mode-selector__label:nth-child(#{$i}) {
    animation-delay: 0.075s + $i * 0.1s;
  }
}

